# c2c_api-poc

./: .gitignore  README.md  app.py  c2c-api-project.code-workspace  docker-compose.yml  pyproject.toml
.github/workflows/: continuous-integration.yml
c2corg_api/: app.py  cooker.py  hooks.py
c2corg_api/emails/: email_service.py
c2corg_api/hooks/: __init__.py  _after_get_document.py  _before_block_user.py  _before_update_user.py  _on_document_save.py  _on_user_block.py  _on_user_creation.py  _on_user_update.py  _on_user_validation.py  _tools.py  _update_search_query.py
c2corg_api/jobs/: purge_non_activated_accounts.py
c2corg_api/legacy/: caching.py  converter.py  core.py  search.py  utils.py
c2corg_api/markdown/: __init__.py  alerts.py  emojis.py  header.py  img.py  ltag.py  nbsp.py  ptag.py  toc.py  video.py  wikilinks.py
c2corg_api/models/: __init__.py  _core.py  _document.py  area.py  article.py  book.py  image.py  outing.py  route.py  topo_map.py  types.py  userprofile.py  waypoint.py  xreport.py
c2corg_api/schemas/: __init__.py  area.json  article.json  book.json  image.json  map.json  outing.json  profile.json  route.json  user.json  user_data.json  users_register.json  waypoint.json  xreport.json
c2corg_api/search/: __init__.py
c2corg_api/security/: discourse_client.py  roles.py
c2corg_api/tests/: conftest.py
c2corg_api/views/: cooker.py  forum.py  health.py  markdown.py  search.py  sitemap.py
docs/: design-choices.md
migrations/: docker-compose.yaml  import_attributes.py  import_tests.py  init.py  test_converter.py
scripts/: clean.sh  install_dev_env.bat  install_dev_env.sh  sloc.sh
tests/: test_fields.py
tests/ext/: colander_ext.py
(+306 files in other folders)
